feat: update controller and openapi spec to support post message endpoint
